# components/pm-subscription-handler/pmsh_service/mod/api/pmsh_swagger.yml
@@ -162,7 +162,7 @@ paths:
 
     delete:
       description: Delete a measurement group
-      operationId: mod.api.controller.delete_meas_group
+      operationId: mod.api.controller.delete_meas_group_by_name
       tags:
         - "measurement group"
       parameters:
@@ -220,6 +220,32 @@ paths:
           description: Invalid input request details
         500:
           description: Exception details of server failure
+
+  /subscription/{subscription_name}/nfFilter:
+    put:
+      tags:
+        - "Subscription"
+      description: >-
+        Update a Subscription nf filter
+      operationId: mod.api.controller.put_nf_filter
+      parameters:
+        - name: subscription_name
+          in: path
+          required: true
+          description: The name of the subscription to update nf filters
+          type: string
+        - in: "body"
+          name: "body"
+          required: true
+          schema:
+            $ref: "#/definitions/nfFilter"
+      responses:
+        201:
+          description: Successfully created PM Subscription
+        409:
+          description: Duplicate data
+        400:
+          description: Invalid input
 
 definitions:
   subscription:
